2012-04-24  Thomas Wolff  <towo@towo.net>

	* fhandler.h (class dev_console): Add members ext_mouse_mode6 and
	ext_mouse_mode15.
	* fhandler_console.cc (fhandler_console::read): Implement extended
	mouse modes 1015 (urxvt, mintty, xterm) and 1006 (xterm).  Recognize,
	but don't implement extended mouse mode 1005 (xterm, mintty).
	Support mouse coordinates greater than 222 (each axis).  Fix formatting.
	(fhandler_console::char_command): Initialize enhanced mouse reporting
	modes.

2012-04-21  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* dtable.cc (fh_alloc): Only disallow opening of nonexistent on-disk
	device.
	* path.cc (path_conv::check): Remove PATH_KEPT_HANDLE setting.
	* path.h (path_types): Remove PATH_KEPT_HANDLE.
	(path_conv::kept_handle): Delete now-unneeded function.

2012-04-19  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* dtable.cc (fh_alloc): Keep fh which was flagged as error if it is for
	an on-disk device and we were stating it.
	* path.cc (path_conv::check): Set PATH_KEPT_HANDLE.
	* path.h (path_types): Add PATH_KEPT_HANDLE.
	(path_conv::kept_handle): Implement.

2012-04-18  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* fhandler.h (fhandler_base::nohandle): Revert to standard
	implementation.
	* dtable.cc (dtable::fixup_after_exec): Specifically reject releasing
	nohandle() type fhandlers rather than relying on contents of io_handle.
	(dtable::fixup_after_fork): Ditto.
	* fhandler_termios.cc: Add includes necessary for definitions of
	have_execed and have_execed_cygwin.
	(fhandler_termios::sigflush): Don't flush console input when we've
	started a non-Cygwin process.

2012-04-15  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* wincap.h: Rename assitant to assistant throughout.
	* wincap.cc: Ditto.
	* devices.in (exists_console): Use fhandler_console::exists () rather
	than raw test.
	* devices.cc: Regenerate.
	* fhandler.h (fhandler_console::exists): Define new function.
	* fhandler_console.cc (fhandler_console::need_invisible): Use