@@ -1,3 +1,11 @@
+2012-04-24  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_console.cc (ALT_PRESSED): Define earlier, never undefine.
+	(CTRL_PRESSED): Ditto.
+	(fhandler_console::read): Simplify expressions testing for pressed ALT
+	or CTRL modifier keys.
+	(get_nonascii_key): Ditto.
+
 2012-04-24  Thomas Wolff  <towo@towo.net>
 
 	* fhandler.h (class dev_console): Add members ext_mouse_mode6 and
